--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,40 @@
 
+@Book{		  moreno-fernandez2022diale,
+  editor	= {Moreno-Fern{\'a}ndez, Francisco and Caravedo, Roc{\'i}o},
+  pages		= {664},
+  publisher	= {Routledge},
+  title		= {Dialectolog{\'i}a Hisp{\'a}nica / The Routledge Handbook
+		  of Spanish Dialectology},
+  year		= {2022}
+}
+
+@Article{	  kirby2024particle,
+  author	= {Kirby, Ian L},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Extending the typology of quantifier particles},
+  year		= {2023}
+}
+
+@Article{	  barrios2016similarity,
+  author	= {Barrios, Shannon and Jiang, Nan and Idsardi, William},
+  journal	= {Second Language Research},
+  number	= {3},
+  pages		= {367--395},
+  title		= {Similarity in L2 Phonology: Evidence from L1 Spanish
+		  late-learners' perception and lexical representation of
+		  English vowel contrasts},
+  volume	= {32},
+  year		= {2016}
+}
+
+@Article{	  murphy2024rose,
+  author	= {Murphy, Elliot},
+  journal	= {Journal of Neurolinguistics},
+  title		= {ROSE: A neurocomputational architecture for syntax},
+  volume	= {70},
+  year		= {2024}
+}
+
 @Article{	  martinez2023evaluating,
   author	= {V{\'a}zquez Mart{\'i}nez, H{\'e}ctor Javier and Lea
 		  Heuser, Annika and Yang, Charles and Kodner, Jordan},
