--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  moore2023socio,
+  author	= {Moore, Emma},
+  publisher	= {Cambridge University Press},
+  title		= {Socio-syntax. Exploring the Social Life of Grammar},
+  year		= {2023}
+}
+
+@Article{	  beltrama2012good,
+  author	= {Beltrama, Andrea and Xiang, Ming},
+  journal	= {roceedings of Sinn und Bedeutung (SuB)},
+  title		= {Is good better than excellent? An experimental
+		  investigation on scalar implicatures and gradable
+		  adjectives},
+  volume	= {17},
+  year		= {2012}
+}
+
 @Book{		  moreno-fernandez2022diale,
   editor	= {Moreno-Fern{\'a}ndez, Francisco and Caravedo, Roc{\'i}o},
   pages		= {664},
