--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,52 @@
 
+@Book{		  lewis2001plura,
+  author	= {Lewis, David},
+  pages		= {288},
+  publisher	= {Wiley-Blackwell},
+  title		= {On the Plurality of Worlds},
+  year		= {2001}
+}
+
+@Article{	  kayne1993toward,
+  author	= {Kayne, Richard S.},
+  journal	= {Studia Linguistica},
+  number	= {1},
+  pages		= {3--31},
+  title		= {Toward a Modular Theory of Auxiliary Selection},
+  volume	= {47},
+  year		= {1993}
+}
+
+@Article{	  leonetti1994ser,
+  author	= {Leonetti, Manuel},
+  journal	= {Barataria},
+  pages		= {182--205},
+  title		= {Ser y estar: estado de la cuesti{\'o}n},
+  volume	= {1},
+  year		= {1994}
+}
+
+@Article{	  lake2023word,
+  author	= {Lake, Brenden M. and Murphy, Gregory L.},
+  journal	= {Psychological Review},
+  number	= {2},
+  pages		= {401--431},
+  title		= {Word meaning in minds and machines},
+  volume	= {130},
+  year		= {2023}
+}
+
+@Article{	  chalmers2023chadtr,
+  author	= {Chalmers, David J.},
+  journal	= {Proceedings and Addresses of the American Philosophical
+		  Association},
+  pages		= {22--45},
+  title		= {Does Thought Require Sensory Grounding? From Pure Thinkers
+		  to Large Language Models},
+  volume	= {97},
+  year		= {2023}
+}
+
 @Book{		  moore2023socio,
   author	= {Moore, Emma},
   publisher	= {Cambridge University Press},
