--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  blank2023what,
+  author	= {Blank, Idan},
+  journal	= {Trends Cogn Sci},
+  number	= {11},
+  pages		= {987--989},
+  title		= {What are large language models supposed to model},
+  volume	= {27},
+  year		= {2023}
+}
+
+@Article{	  toquero-perez2023mas,
+  author	= {Toquero-P{\'e}rez, Luis Miguel},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {There is only one m{\'a}s: Spanish que/de comparative
+		  alternation},
+  year		= {2023}
+}
+
 @Book{		  lewis2001plura,
   author	= {Lewis, David},
   pages		= {288},
