--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,71 @@
 
+@Article{	  reilly2023what,
+  author	= {Reilly, Jamie and Shain, Cory and Borghesani, Valentina
+		  and Kuhnke, Philipp and Vigliocco, Gabriella and Peelle,
+		  Jonathan E. and Mahon, Bradford and Buxbaum, Laurel and
+		  Majid, Asifa and Brysbaert, Marc and Borghi, Anna M. and De
+		  Deyne, Simon and Dove, Guy and Papeo, Liuba and Pexman,
+		  Penny M. and Poeppel, David and Lupyan, Gary and Boggio,
+		  Paulo and Hickock, Gregory and Gwilliams, Laura and
+		  Fernandino, Leonardo and Mirman, Daniel and Chrysikou,
+		  Evangelia G. and Sandberg, Chaleece and Crutch, Sebastian J
+		  and Pylkkanen, Liina and Yee, Eiling and Jackson, Rebecca
+		  L. and Rodd, Jennifer M and Bedny, Marina and Connell,
+		  Louise and Kiefer, Markus and Kemmerer, David and de
+		  Zubicaray, Greig Ian and Jefferies, Beth and Lynott, Dermot
+		  and Siew, Cynthia S. Q. and Desai, Rutvik H. and McRae, Ken
+		  and Diaz, Michele T and Bolognesi, Marianna and Patterson,
+		  Karalyn and Fedorenko, Evelina and Kiran, Swathi and
+		  Montefinese, Maria and Binder, Jeffrey R and Yap, Melvin
+		  Ju-min and Hartwigsen, Gesa and Cantlon, Jessica and Bi,
+		  Yanchao and Hoffman, Paul and Garcea, Frank E. and Vinson,
+		  David},
+  title		= {What we mean when we say semantic: A Consensus statement
+		  on the nomenclature of semantic memory},
+  year		= {2023}
+}
+
+@Article{	  aguilar-guevara2023weak,
+  author	= {Aguilar‐Guevara, Ana and Oggiani, Carolina},
+  journal	= {Language and Linguistics Compass},
+  number	= {6},
+  title		= {Weak definite nominals},
+  volume	= {17},
+  year		= {2023}
+}
+
+@Article{	  bates2015fitting,
+  author	= {Bates, Douglas and M{\"a}chler, Martin and Bolker, Ben and
+		  Walker, Steve},
+  journal	= {Journal of Statistical Software},
+  number	= {1},
+  title		= {Fitting Linear Mixed-Effects Models Using lme4},
+  volume	= {67},
+  year		= {2015}
+}
+
+@Article{	  barr2013random,
+  author	= {Barr, D. J. and Levy, R. and Scheepers, C. and Tily, H.
+		  J.},
+  journal	= {J Mem Lang},
+  number	= {3},
+  title		= {Random effects structure for confirmatory hypothesis
+		  testing: Keep it maximal.},
+  volume	= {68},
+  year		= {2013}
+}
+
+@Article{	  baayen2008mixed,
+  author	= {Baayen, R.H. and Davidson, D.J. and Bates, D.M.},
+  journal	= {Journal of Memory and Language},
+  number	= {4},
+  pages		= {390--412},
+  title		= {Mixed-effects modeling with crossed random effects for
+		  subjects and items},
+  volume	= {59},
+  year		= {2008}
+}
+
 @Article{	  blank2023what,
   author	= {Blank, Idan},
   journal	= {Trends Cogn Sci},
