--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  torres-tamarit2023proso,
+  author	= {Torres-Tamarit, Francesc and Mart{\'i}nez-Paricio,
+		  Violeta},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The prosody of Spanish acronyms},
+  year		= {2023}
+}
+
 @Article{	  reilly2023what,
   author	= {Reilly, Jamie and Shain, Cory and Borghesani, Valentina
 		  and Kuhnke, Philipp and Vigliocco, Gabriella and Peelle,
