--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,52 @@
 
+@Article{	  taraldsen2017parameters,
+  author	= {Taraldsen, Tarald},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {Syntactic Parameters and (Apparent) Cross-Linguistic
+		  Variation in the Lexicon},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  chomsky2017parameters,
+  author	= {Chomsky, Noam},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {Notes on Parameters},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  epstein2017lingu,
+  author	= {Epstein, Samuel and Obata, Miki and Seely, Daniel},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  pages		= {481--516},
+  title		= {Is Linguistic Variation Entirely Linguistic?},
+  volume	= {41},
+  year		= {2017}
+}
+
+@Article{	  siva2017change,
+  author	= {Siva, Karthik and Tao, Jim and Marcolli, Matilde},
+  journal	= {Linguistic Analysis},
+  number	= {3-4},
+  title		= {Syntactic Parameters and Spin Glass Models of Language
+		  Change},
+  volume	= {41},
+  year		= {2017}
+}
+
+@PhDThesis{	  ke2019agree,
+  address	= {Michigan},
+  author	= {Ke, Alan Hezao},
+  school	= {University of Michigan},
+  title		= {The Syntax, Semantics and Processing of Agreement and
+		  Binding Grammatical Illusions},
+  year		= {2019}
+}
+
 @Article{	  torres-tamarit2023proso,
   author	= {Torres-Tamarit, Francesc and Mart{\'i}nez-Paricio,
 		  Violeta},
