--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Book{		  chomsky2023merge,
+  author	= {Chomsky, Noam and Seely, T. Daniel and Berwick, Robert C.
+		  and Fong, Sandiway and Huybregts, M. A. C. and Kitahara,
+		  Hisatsugu and McInnerney, Andrew and Sugimoto, Yushi},
+  publisher	= {Cambridge University Press},
+  title		= {Merge and the Strong Minimalist Thesis},
+  year		= {2023}
+}
+
+@Book{		  bode2020adjuncts,
+  author	= {Bode, Stefanie},
+  publisher	= {Routledge},
+  title		= {Casting a Minimalist Eye on Adjuncts},
+  year		= {2020}
+}
+
 @Article{	  taraldsen2017parameters,
   author	= {Taraldsen, Tarald},
   journal	= {Linguistic Analysis},
