--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,107 @@
 
+@Article{	  buder-grondahl2023ambig,
+  author	= {Buder-Gr{\"o}ndahl, Tommi},
+  journal	= {Synthese},
+  number	= {1},
+  title		= {The ambiguity of BERTology: what do large language models
+		  represent},
+  volume	= {203},
+  year		= {2023}
+}
+
+@Article{	  dudley2023knowl,
+  author	= {Dudley, Rachel and Vogel, Christopher},
+  journal	= {Synthese},
+  number	= {1},
+  title		= {Knowledge, the concept know, and the word know:
+		  considerations from polysemy and pragmatics},
+  volume	= {203},
+  year		= {2023}
+}
+
+@Article{	  lauer2023thing,
+  author	= {Lauer, Helen},
+  journal	= {Synthese},
+  number	= {1},
+  title		= {How to do things with insecure extensions},
+  volume	= {203},
+  year		= {2023}
+}
+
+@Article{	  boge2023funct,
+  author	= {Boge, Florian J.},
+  journal	= {Synthese},
+  number	= {1},
+  title		= {Functional Concept Proxies and the Actually Smart Hans
+		  Problem: What's Special About Deep Neural Networks in
+		  Science},
+  volume	= {203},
+  year		= {2023}
+}
+
+@Article{	  carrasco2022predicacion,
+  author	= {Carrasco Guti{\'e}rrez, {\'A}ngeles},
+  journal	= {ReGrOC. Revista de Gram{\'a}tica Orientada a las
+		  Competencias},
+  number	= {1},
+  pages		= {11--35},
+  title		= {La predicaci{\'o}n y la estructura argumental},
+  volume	= {5},
+  year		= {2022}
+}
+
+@Article{	  maldonado2023apues,
+  author	= {Maldonado, Ricardo},
+  journal	= {Studia Linguistica},
+  title		= {Ah{\'i} se apuesta la vida. The emergence of impersonal
+		  interpretations in Spanish},
+  year		= {2023}
+}
+
+@Article{	  siskolar2023repre,
+  author	= {{\c S}i{\c s}kolar, Cem},
+  journal	= {Linguistics and Philosophy},
+  title		= {Representing multiply de re epistemic modal statements},
+  year		= {2023}
+}
+
+@Article{	  dikmen2023when,
+  author	= {Dikmen, Furkan and Guerzoni, Elena and Demirok, {\"O}mer},
+  journal	= {Natural Language Semantics},
+  title		= {When tense shifts presuppositions: hani and monstrous
+		  semantics},
+  year		= {2023}
+}
+
+@Article{	  mushin2023toward,
+  author	= {Mushin, Ilana and Blythe, Joe and Dahmen, Josua and de
+		  Dear, Caroline and Gardner, Rod and Possemato, Francesco
+		  and Stirling, Lesley},
+  journal	= {Australian Journal of Linguistics},
+  number	= {2},
+  pages		= {158--189},
+  title		= {Towards an interactional grammar of interjections:
+		  Expressing compassion in four Australian languages},
+  volume	= {43},
+  year		= {2023}
+}
+
+@Article{	  marcolli2024interface,
+  author	= {Marcolli, Matilde and Berwick, Robert and Chomsky, Noam},
+  title		= {Syntax-semantics Interface: an Algebraic Mocel},
+  year		= {2024}
+}
+
+@Article{	  freidin2021strong,
+  author	= {Freidin, Robert},
+  journal	= {Philosophies},
+  number	= {4},
+  pages		= {97},
+  title		= {The Strong Minimalist Thesis},
+  volume	= {6},
+  year		= {2021}
+}
+
 @Book{		  chomsky2023merge,
   author	= {Chomsky, Noam and Seely, T. Daniel and Berwick, Robert C.
 		  and Fong, Sandiway and Huybregts, M. A. C. and Kitahara,
