--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,79 @@
 
+@Article{	  gmp2024lexical,
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  journal	= {Languages},
+  number	= {1},
+  title		= {Lexical-Syntactic Classes of Adjectives in Copular
+		  Sentences across Spanish Varieties: The Innovative Use of
+		  Estar},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  baggio2024gender,
+  author	= {Baggio, Pietro and Sudo, Yasutada},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {153--173},
+  title		= {The Representation of Gender and Inflectional Class in
+		  Italian: A Reply to Ku{\v c}erov{\'a} 2018},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  trommer2024conca,
+  author	= {Trommer, Jochen},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {95--151},
+  title		= {The Concatenative Structure of Tonal Overwriting},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  donati2024vps,
+  author	= {Cecchetto, Carlo and Donati, Caterina},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {1--37},
+  title		= {Labeling (Reduced) Structures: When VPs Are Sentences},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  deal2024pcc,
+  author	= {Deal, Amy Rose},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {39--94},
+  title		= {Interaction, Satisfaction, and the PCCs},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  kallin2024subcat,
+  author	= {Kalin, Laura and Rolle, Nicholas},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {197--218},
+  title		= {Deconstructing Subcategorization: Conditions on Insertion
+		  vs. Conditions on Position},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  uegaki2024nand,
+  author	= {Uegaki, Wataru},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {174--196},
+  title		= {The Informativeness/Complexity Trade-Off in the Domain of
+		  Boolean Connectives},
+  volume	= {55},
+  year		= {2023}
+}
+
 @Article{	  buder-grondahl2023ambig,
   author	= {Buder-Gr{\"o}ndahl, Tommi},
   journal	= {Synthese},
