--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  baker2024control,
+  author	= {Baker, Mark C. and Ikawa, Shiori},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Control theory and the relationship between logophoric
+		  pronouns and logophoric uses of anaphors},
+  year		= {2024}
+}
+
+@Article{	  larson2024quant,
+  author	= {Larson, Richard K.},
+  journal	= {Natural Language Semantics},
+  title		= {Quantification, matching and events},
+  year		= {2024}
+}
+
+@Article{	  linzen2018reliability,
+  author	= {Linzen, Tal and Oseki, Yohei},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The reliability of acceptability judgments across
+		  languages},
+  volume	= {3},
+  year		= {2018}
+}
+
+@Article{	  dentella2023syste,
+  author	= {Dentella, Vittoria and G{\"u}nther, Fritz and Leivada,
+		  Evelina},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {51},
+  title		= {Systematic testing of three Language Models reveals low
+		  language accuracy, absence of response stability, and a
+		  yes-response bias},
+  volume	= {120},
+  year		= {2023}
+}
+
 @Article{	  gmp2024lexical,
   author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
 		  P{\'e}rez-Jim{\'e}nez, Isabel},
