--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  guest2023what,
+  author	= {Guest, Olivia},
+  title		= {What makes a good theory, and how do we make a theory
+		  good},
+  year		= {2023}
+}
+
 @Article{	  baker2024control,
   author	= {Baker, Mark C. and Ikawa, Shiori},
   journal	= {Natural Language and Linguistic Theory},
