--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  major2024say,
+  author	= {Major, Travis},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Re-analyzing `say' complementation: Implications for case
+		  theory and beyond},
+  year		= {2024}
+}
+
 @Article{	  guest2023what,
   author	= {Guest, Olivia},
   title		= {What makes a good theory, and how do we make a theory
