--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  gong2024degre,
+  author	= {Gong, Ying and Coppock, Elizabeth},
+  journal	= {Natural Language Semantics},
+  title		= {Is degree abstraction a parameter or a universal? Evidence
+		  from Mandarin Chinese},
+  year		= {2024}
+}
+
 @Article{	  major2024say,
   author	= {Major, Travis},
   journal	= {Natural Language and Linguistic Theory},
