--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Article{	  martinezvera2024direct,
+  author	= {Mart{\'i}nez Vera, Gabriel},
+  journal	= {Natural Language Semantics},
+  title		= {Direct evidentiality and discourse in Southern Aymara},
+  year		= {2024}
+}
+
+@Book{		  bar-on2004speaking,
+  author	= {Bar-On, Dorit},
+  pages		= {449},
+  publisher	= {Oxford University Press on Demand},
+  title		= {Speaking My Mind: Expression and Self-knowledge},
+  year		= {2004}
+}
+
 @Article{	  lasnik2017noam,
   author	= {Lasnik, Howard and Lohndal, Terje},
   journal	= {Oxford Research Encyclopedia in Linguistics},
