--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@InBook{	  hacquard2020actuality,
+  author	= {Hacquard, Valentine},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  pages		= {1-26},
+  publisher	= {John Wiley and Sons},
+  title		= {Actuality Entailments},
+  year		= {2020}
+}
+
 @Article{	  martinezvera2024direct,
   author	= {Mart{\'i}nez Vera, Gabriel},
   journal	= {Natural Language Semantics},
@@ -30,7 +39,7 @@
   year		= {2024}
 }
 
-@Article{	  mirowski2023evolu,
+@Article{	  mirowski2023evolution,
   author	= {Mirowski, Philip},
   journal	= {Social Research: An International Quarterly},
   number	= {4},
