--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@PhDThesis{	  arregui2005accessibility,
+  address	= {Amherts},
+  author	= {Arregui, Ana},
+  school	= {University of Massachusetts},
+  title		= {On the Accessibility of Possible Worlds: The Role of Tense
+		  and Aspect},
+  year		= {2005}
+}
+
 @InBook{	  hacquard2020actuality,
   author	= {Hacquard, Valentine},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
