--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  ogihara2024limitations,
+  author	= {Ogihara, Toshiyuki and Steinert-Threlkeld, Shane},
+  journal	= {Semantics and Pragmatics},
+  number	= {1},
+  title		= {Limitations of a modal analysis of before and after},
+  volume	= {17},
+  year		= {2024}
+}
+
+@Article{	  glass2023using,
+  author	= {Glass, Lelia},
+  journal	= {Semantics and Pragmatics},
+  number	= {6},
+  title		= {Using the Anna Karenina Principle to explain why cause
+		  favors negative-sentiment complements},
+  volume	= {16},
+  year		= {2023}
+}
+
 @PhDThesis{	  arregui2005accessibility,
   address	= {Amherts},
   author	= {Arregui, Ana},
