--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  little2024type-shifting,
+  author	= {Little, Carol Rose and AnderBois, Scott and Coon,
+		  Jessica},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Type-shifting in headless relative clauses},
+  year		= {2024}
+}
+
 @Article{	  ogihara2024limitations,
   author	= {Ogihara, Toshiyuki and Steinert-Threlkeld, Shane},
   journal	= {Semantics and Pragmatics},
