--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  suner2023levels,
+  author	= {Su{\~n}er Gratac{\'o}s, Avel·lina},
+  journal	= {Languages},
+  number	= {1},
+  pages		= {16},
+  title		= {Levels of Variation in Subordinates of Immediate
+		  Succession in Current Spanish},
+  volume	= {9},
+  year		= {2023}
+}
+
 @Article{	  little2024type-shifting,
   author	= {Little, Carol Rose and AnderBois, Scott and Coon,
 		  Jessica},
