--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,79 @@
 
+@Article{	  tagliani2022cycle,
+  author	= {Tagliani, Marta and Rabanus, Stefan},
+  journal	= {Evolutionary Linguistic Theory},
+  number	= {2},
+  pages		= {191--228},
+  title		= {The cycle in language change: Insights from diachronic
+		  phonology and syntax of negation},
+  volume	= {4},
+  year		= {2022}
+}
+
+@Article{	  delfitto2022inside,
+  author	= {Delfitto, Denis and Fiorin, Gaetano},
+  journal	= {Evolutionary Linguistic Theory},
+  number	= {2},
+  pages		= {153--190},
+  title		= {Inside names: A contextualist approach to the syntax and
+		  semantics of direct reference},
+  volume	= {4},
+  year		= {2022}
+}
+
+@Book{		  company2017sintaxis-0303,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Tercera
+		  parte, Preposiciones, adverbios y conjunciones; Relaciones
+		  interoracionales},
+  volume	= {3},
+  year		= {2014}
+}
+
+@Book{		  company2017sintaxis-0302,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Tercera
+		  parte, Preposiciones, adverbios y conjunciones; Relaciones
+		  interoracionales},
+  volume	= {2},
+  year		= {2014}
+}
+
+@Book{		  company2017sintaxis-0301,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Tercera
+		  parte, Preposiciones, adverbios y conjunciones; Relaciones
+		  interoracionales},
+  volume	= {1},
+  year		= {2014}
+}
+
+@Book{		  company2009sintaxis-fn02,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Segunda
+		  parte, la frase nomimal},
+  volume	= {2},
+  year		= {2009}
+}
+
+@Book{		  company2009sintaxis-fn01,
+  address	= {M{\'e}xico},
+  editor	= {Company Company, Concepci{\'o}n},
+  publisher	= {FCE-UNAM},
+  title		= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Segunda
+		  parte, la frase nomimal},
+  volume	= {1},
+  year		= {2009}
+}
+
 @Article{	  suner2023levels,
   author	= {Su{\~n}er Gratac{\'o}s, Avel·lina},
   journal	= {Languages},
