--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@Article{	  law2024force,
+  author	= {Law, Jess H.-K. and Li, Haoze and Bhadra, Diti},
+  journal	= {Natural Language Semantics},
+  title		= {Force shift: a case study of Cantonese ho2 particle
+		  clusters}
+}
+
+@Article{	  kagan2024slavic,
+  author	= {Kagan, Olga},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {35--63},
+  title		= {The Slavic suffix -in/-yn as partition shifter},
+  volume	= {32}
+}
+
+@Article{	  katzir2024roles,
+  author	= {Katzir, Roni},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {65--92},
+  title		= {On the roles of anaphoricity and questions in free focus},
+  volume	= {32}
+}
+
+@Article{	  saebo2024counterfactual,
+  author	= {S{\ae}b{\o}, Kjell Johan},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {93--134},
+  title		= {Counterfactual mood in Czech, German, Norwegian, and
+		  Russian},
+  volume	= {32}
+}
+
 @Article{	  tagliani2022cycle,
   author	= {Tagliani, Marta and Rabanus, Stefan},
   journal	= {Evolutionary Linguistic Theory},
