--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,9 +1,17 @@
 
+@Book{		  liggins2024abstract,
+  author	= {Liggins, David},
+  publisher	= {Cambridge University Press},
+  title		= {Abstract Objects},
+  year		= {2024}
+}
+
 @Article{	  law2024force,
   author	= {Law, Jess H.-K. and Li, Haoze and Bhadra, Diti},
   journal	= {Natural Language Semantics},
   title		= {Force shift: a case study of Cantonese ho2 particle
-		  clusters}
+		  clusters},
+  year		= {2024}
 }
 
 @Article{	  kagan2024slavic,
@@ -12,7 +20,8 @@
   number	= {1},
   pages		= {35--63},
   title		= {The Slavic suffix -in/-yn as partition shifter},
-  volume	= {32}
+  volume	= {32},
+  year		= {2024}
 }
 
 @Article{	  katzir2024roles,
@@ -21,7 +30,8 @@
   number	= {1},
   pages		= {65--92},
   title		= {On the roles of anaphoricity and questions in free focus},
-  volume	= {32}
+  volume	= {32},
+  year		= {2024}
 }
 
 @Article{	  saebo2024counterfactual,
@@ -31,7 +41,8 @@
   pages		= {93--134},
   title		= {Counterfactual mood in Czech, German, Norwegian, and
 		  Russian},
-  volume	= {32}
+  volume	= {32},
+  year		= {2024}
 }
 
 @Article{	  tagliani2022cycle,
