--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  kampanarou2024relating,
+  author	= {Kampanarou, Anna},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Relating {BE} and {HAVE} via transitivity: Evidence from
+		  Greek},
+  volume	= {9},
+  year		= {2024},
+  doi		= {10.16995/glossa.10202}
+}
+
 @Book{		  liggins2024abstract,
   author	= {Liggins, David},
   publisher	= {Cambridge University Press},
