--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Book{		  lier2023oxford,
+  address	= {New York, NY Oxford},
+  editor	= {van Lier, Eva Helena},
+  publisher	= {Oxford University Press},
+  title		= {Oxford handbook of word classes},
+  year		= {2023}
+}
+
+@Article{	  fishman2023hebrew,
+  author	= {Fishman, Alon},
+  journal	= {Linguistics},
+  number	= {4},
+  pages		= {997--1026},
+  title		= {Hebrew copulative perception verbs},
+  volume	= {61},
+  year		= {2023}
+}
+
 @Article{	  kampanarou2024relating,
   author	= {Kampanarou, Anna},
   journal	= {Glossa: a journal of general linguistics},
