--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,64 @@
 
+@Article{	  storme2024paradigm,
+  author	= {Storme, Benjamin},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Paradigm uniformity effects on French liaison},
+  year		= {2024}
+}
+
+@Article{	  bonet2019direct,
+  author	= {Bonet, Eul{\`a}lia and Cheng, Lisa Lai-Shen and Downing,
+		  Laura J. and Mascar{\'o}, Joan},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {751--777},
+  title		= {(In)direct Reference in the Phonology-Syntax Interface
+		  under Phase Theory: A Response to ``Modular PIC''
+		  (D'Alessandro and Scheer 2015)},
+  volume	= {50},
+  year		= {2019}
+}
+
+@Article{	  chung2012reaching,
+  author	= {Chung, Sandra},
+  journal	= {Proceedings from the Annual Meeting of the Chicago
+		  Linguistic Society},
+  number	= {1},
+  pages		= {169--190},
+  title		= {On reaching agreement late},
+  volume	= {48},
+  year		= {2012}
+}
+
+@Article{	  mascaro2007external,
+  author	= {Mascar{\'o}, Joan},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {715--735},
+  title		= {External Allomorphy and Lexical Representation},
+  volume	= {38},
+  year		= {2007}
+}
+
+@InBook{	  mascaro2002interfaz,
+  address	= {Barcelona (ES)},
+  author	= {Mascar{\'o}, Joan},
+  editor	= {Catal{\'a}, Natalia},
+  pages		= {143-155},
+  title		= {La interfaz articulatorio-perceptiva en el programa
+		  minimista El lenguaje y la mente humana},
+  year		= {2002}
+}
+
+@PhDThesis{	  noyer1992features,
+  address	= {Cambidge, Mass.},
+  author	= {Noyer, Robert Rolf},
+  school	= {Massachusetts Institute of Technology},
+  title		= {Features, positions and affixes in autonomous
+		  morphological structure},
+  year		= {1992}
+}
+
 @Book{		  lier2023oxford,
   address	= {New York, NY Oxford},
   editor	= {van Lier, Eva Helena},
