--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@Article{	  rezac2024rise,
+  author	= {Rezac, Milan},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The rise and fall of a person-case constraint in Breton},
+  year		= {2024}
+}
+
+@Article{	  scontras2017subjectivity,
+  author	= {Scontras, Gregory and Degen, Judith and Goodman, Noah D.},
+  journal	= {Open Mind},
+  number	= {1},
+  pages		= {53--66},
+  title		= {Subjectivity Predicts Adjective Ordering Preferences},
+  volume	= {1},
+  year		= {2017}
+}
+
+@Article{	  ortega-andres2019polysemy,
+  author	= {Ortega-Andr{\'e}s, Marina and Vicente, Agust{\'i}n},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Polysemy and co-predication},
+  volume	= {4},
+  year		= {2019}
+}
+
+@Article{	  cowper2016functions,
+  author	= {Cowper, Elizabeth and Hall, Daniel Currie},
+  journal	= {43rd LACUS Forum},
+  title		= {Functions and categories in natural human language: A
+		  generative perspective},
+  year		= {2016}
+}
+
 @Article{	  storme2024paradigm,
   author	= {Storme, Benjamin},
   journal	= {Natural Language and Linguistic Theory},
