--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  dikken2007data,
+  author	= {Dikken, Marcel Den and Bernstein, Judy B. and Tortora,
+		  Christina and Zanuttini, Raffaella},
+  number	= {3},
+  pages		= {335--352},
+  title		= {Data and grammar: Means and individuals},
+  volume	= {33},
+  year		= {2007},
+  doi		= {10.1515/TL.2007.022}
+}
+
+@Article{	  delpinal2017dual,
+  author	= {Del Pinal, Guillermo and Reuter, Kevin},
+  pages		= {477--501},
+  title		= {Dual Character Concepts in Social Cognition: Commitments
+		  and the Normative Dimension of Conceptual Representation},
+  volume	= {41},
+  year		= {2017},
+  doi		= {10.1111/cogs.12456}
+}
+
+@Article{	  guo2021gender,
+  author	= {Guo, Cai and Dweck, Carol S. and Markman, Ellen M.},
+  number	= {5},
+  pages		= {e12954},
+  title		= {Gender Categories as Dual-Character Concepts?},
+  volume	= {45},
+  year		= {2021},
+  doi		= {10.1111/cogs.12954}
+}
+
 @Article{	  rezac2024rise,
   author	= {Rezac, Milan},
   journal	= {Natural Language and Linguistic Theory},
