--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Book{		  hale1993view,
+  address	= {Cambidge, Mass.},
+  editor	= {Hale, Kenneth L and Keyser, Samuel Jay},
+  publisher	= {The MIT Press},
+  title		= {The View From Building 20},
+  year		= {1993}
+}
+
+@Book{		  zhang2023coordinate,
+  author	= {Zhang, Ning},
+  title		= {Coordinate Structures},
+  year		= {2023}
+}
+
+@Article{	  henry2005nonstandard,
+  author	= {Henry, Alison},
+  journal	= {Data in Theoretical Linguistics Lingua},
+  number	= {11},
+  pages		= {1599--1617},
+  title		= {Non-standard dialects and linguistic data},
+  volume	= {115},
+  year		= {2005}
+}
+
 @Article{	  dikken2007data,
   author	= {Dikken, Marcel Den and Bernstein, Judy B. and Tortora,
 		  Christina and Zanuttini, Raffaella},
