--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  akuzawa2024lexical,
+  author	= {Akuzawa, Koyo and Kubota, Yusuke},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The lexical semantics of finite control: A view from
+		  Japanese},
+  year		= {2024}
+}
+
+@Article{	  clem2024emergence,
+  author	= {Clem, Emily and Dawson, Virginia},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The emergence of case matching in discontinuous DPs},
+  year		= {2024}
+}
+
+@Article{	  blumel2024case,
+  author	= {Bl{\"u}mel, Andreas},
+  journal	= {Syntax},
+  title		= {A case study in underspecification of UG: External Pair
+		  Merge of v and T},
+  year		= {2024}
+}
+
+@Book{		  goodall2021cambridge,
+  address	= {London},
+  editor	= {Goodall, Grant},
+  publisher	= {Cambridge University Press},
+  title		= {The Cambridge Handbook of Experimental Syntax},
+  year		= {2021}
+}
+
 @Book{		  hale1993view,
   address	= {Cambidge, Mass.},
   editor	= {Hale, Kenneth L and Keyser, Samuel Jay},
