--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,79 @@
 
+@Article{	  poole2022im,
+  author	= {Poole, Ethan},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--40},
+  title		= {({Im})possible {Traces}},
+  year		= {2024},
+  doi		= {10.1162/ling_a_00467}
+}
+
+@InCollection{	  anagnostopoulou1999experiencers,
+  address	= {Dordrecht},
+  author	= {Anagnostopoulou, Elena},
+  booktitle	= {Studies in {Greek} {Syntax}},
+  editor	= {Alexiadou, Artemis and Horrocks, Geoffrey and Stavrou,
+		  Melita},
+  pages		= {67--93},
+  publisher	= {Springer Netherlands},
+  series	= {Studies in {Natural} {Language} and {Linguistic}
+		  {Theory}},
+  title		= {On {Experiencers}},
+  year		= {1999},
+  doi		= {10.1007/978-94-015-9177-5_4}
+}
+
+@Article{	  matsuoka2024personalevaluation,
+  author	= {Matsuoka, Mikinari},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {273--321},
+  title		= {Personal-evaluation secondary predicates in Japanese and
+		  quirky experiencer raising},
+  volume	= {42},
+  year		= {2024}
+}
+
+@Article{	  bogomolova2024indexical,
+  author	= {Bogomolova, Natalia},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {1--52},
+  title		= {Indexical shift in Tabasaran},
+  volume	= {42},
+  year		= {2024}
+}
+
+@Article{	  hara2024daroo,
+  author	= {Hara, Yurie},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {95--152},
+  title		= {*Daroo ka↑: the interplay of deictic modality, sentence
+		  type, prosody and tier of meaning},
+  volume	= {42},
+  year		= {2024}
+}
+
+@Article{	  poole2023more,
+  author	= {Poole, Ethan and Mendia, Jon Ander and Keine, Stefan},
+  journal	= {Linguistic Inquiry},
+  pages		= {1--14},
+  title		= {More on (the Lack of) Reconstruction in English
+		  Tough-Constructions},
+  year		= {2024}
+}
+
+@Article{	  whelpton2002locality,
+  author	= {Whelpton, Matthew},
+  journal	= {Natural Language Semantics},
+  number	= {3},
+  pages		= {167--210},
+  title		= {Locality and Control with Infinitives of Result},
+  volume	= {10},
+  year		= {2002}
+}
+
 @Article{	  akuzawa2024lexical,
   author	= {Akuzawa, Koyo and Kubota, Yusuke},
   journal	= {Natural Language and Linguistic Theory},
