--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,29 @@
 
+@Article{	  ippolito2024hell,
+  author	= {Ippolito, Michela},
+  journal	= {Journal of Semantics},
+  title		= {The Hell With Questions},
+  year		= {2024}
+}
+
+@Article{	  casalicchiopseudorelative,
+  author	= {Casalicchio, Jan and Herbeck, Peter},
+  journal	= {Syntax},
+  title		= {Pseudorelative clauses, infinitives, and gerunds with
+		  Spanish perception verbs: A comparative view},
+  year		= {2024}
+}
+
+@Article{	  manetta2024it,
+  author	= {Manetta, Emily Walker and Bhatia, Ian},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {``It was just so hard'': ineffable just as a mixed
+		  expressive},
+  volume	= {9},
+  year		= {2024}
+}
+
 @Article{	  poole2022im,
   author	= {Poole, Ethan},
   journal	= {Linguistic Inquiry},
