--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,51 @@
 
+@Article{	  zhang2022kind,
+  author	= {Zhang, Niina Ning},
+  journal	= {Studia Linguistica},
+  number	= {2},
+  pages		= {315--353},
+  title		= {Kind-Level Predicates of Events Inside Another
+		  Predication},
+  volume	= {76},
+  year		= {2022}
+}
+
+@InBook{	  morzycki2021structure,
+  address	= {Cham},
+  author	= {Morzycki, Marcin},
+  booktitle	= {Concepts, Frames and Cascades in Semantics, Cognition and
+		  Ontology},
+  editor	= {L{\"o}bner, Sebastian and Gamerschlag, Thomas and
+		  Kalenscher, Tobias and Schrenk, Markus and Zeevat, Henk},
+  pages		= {65-99},
+  publisher	= {Springer International Publishing},
+  title		= {Structure and Ontology in Nonlocal Readings of
+		  Adjectives},
+  year		= {2021}
+}
+
+@Book{		  kim2019syntax,
+  address	= {Cham},
+  author	= {Kim, Min-Joo},
+  publisher	= {Springer International Publishing},
+  title		= {Kind-Level Predicates of Events Inside Another
+		  Predication},
+  volume	= {96},
+  year		= {2019}
+}
+
+@InBook{	  morzycki2017viruses,
+  address	= {University of Massachusetts},
+  author	= {Morzycki, Marcin},
+  booktitle	= {A Schrift to Fest Kyle Johnson},
+  editor	= {LaCara, Nicholas and Moulton, Keir and Tessier,
+		  Anne-Michele},
+  publisher	= {University of Massachusetts Linguistics Open Access
+		  Publications},
+  title		= {Some Viruses in the Semantics},
+  year		= {2017}
+}
+
 @Article{	  ippolito2024hell,
   author	= {Ippolito, Michela},
   journal	= {Journal of Semantics},
