--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  kodner2023what,
+  author	= {Kodner, Jordan},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {733--792},
+  title		= {What Learning {{Latin}} Verbal Morphology Tells Us about
+		  Morphological Theory},
+  volume	= {41},
+  year		= {2023},
+  doi		= {10.1007/s11049-022-09553-2}
+}
+
 @Article{	  zhang2022kind,
   author	= {Zhang, Niina Ning},
   journal	= {Studia Linguistica},
