--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  tanaka2024many,
+  address	= {Cambridge},
+  author	= {Tanaka, Koji and Sandgren, Alexander},
+  publisher	= {Cambridge University Press},
+  title		= {The Many Faces of Impossibility},
+  year		= {2024}
+}
+
 @Article{	  kodner2023what,
   author	= {Kodner, Jordan},
   journal	= {Natural Language and Linguistic Theory},
