--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  grano2024intention,
+  author	= {Grano, Thomas},
+  journal	= {Linguistics and Philosophy},
+  title		= {Intention Reports and Eventuality Abstraction in a Theory
+		  of Mood Choice},
+  year		= {2024}
+}
+
+@Book{		  hornstein2024merge,
+  address	= {Cambridge},
+  author	= {Hornstein, Norbert},
+  publisher	= {Cambridge University Press},
+  title		= {The Merge Hypothesis: A Theory of Aspects of Syntax},
+  year		= {2024}
+}
+
 @Book{		  tanaka2024many,
   address	= {Cambridge},
   author	= {Tanaka, Koji and Sandgren, Alexander},
