--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,69 @@
 
+@Article{	  bejar2023agree,
+  author	= {Bejar, Susana and Kahnemuyipour, Arsalan},
+  journal	= {Syntax},
+  number	= {3},
+  pages		= {251--279},
+  title		= {Agree and the Subjects of Specificational Clauses},
+  volume	= {26},
+  year		= {2023},
+  doi		= {10.1111/synt.12256}
+}
+
+@Article{	  gotah2024syntactic,
+  author	= {Gotah, Selikem and Lee, Soo-Hwan},
+  journal	= {Syntax},
+  title		= {Syntactic Negation in {{Ewe}} ({{Tongugbe}}) Agent
+		  Nominalizations},
+  year		= {2024},
+  doi		= {10.1111/synt.12280}
+}
+
+@Article{	  gumiel-molina2024lexical,
+  author	= {{Gumiel-Molina}, Silvia and {Moreno-Quib{\'e}n}, Norberto
+		  and {P{\'e}rez-Jim{\'e}nez}, Isabel},
+  journal	= {Languages},
+  number	= {1},
+  pages		= {20},
+  publisher	= {Multidisciplinary Digital Publishing Institute},
+  title		= {Lexical--{{Syntactic Classes}} of {{Adjectives}} in
+		  {{Copular Sentences}} across {{Spanish Varieties}}: {{The
+		  Innovative Use}} of {{Estar}}},
+  volume	= {9},
+  year		= {2024},
+  doi		= {10.3390/languages9010020}
+}
+
+@PhDThesis{	  harris2019nonaspectual,
+  author	= {Harris, Alisia H.},
+  school	= {Yale University},
+  title		= {The {{Non-Aspectual Meaning}} of {{African American
+		  English}} `{{Aspect}}' {{Markers}}},
+  year		= {2019}
+}
+
+@Article{	  lasersohn1990group,
+  author	= {Lasersohn, Peter},
+  journal	= {Linguistics and Philosophy},
+  number	= {2},
+  pages		= {179--206},
+  title		= {Group Action and Spatio-Temporal Proximity},
+  volume	= {13},
+  year		= {1990},
+  doi		= {10.1007/BF00630733}
+}
+
+@Article{	  moltmann2004semantics,
+  author	= {Moltmann, Friederike},
+  journal	= {Natural Language Semantics},
+  number	= {4},
+  pages		= {289--318},
+  title		= {The {{Semantics}} of {{Together}}},
+  volume	= {12},
+  year		= {2004},
+  doi		= {10.1007/s11050-004-6453-6}
+}
+
 @Article{	  grano2024intention,
   author	= {Grano, Thomas},
   journal	= {Linguistics and Philosophy},
