--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  finholt2024copulas,
+  author	= {Finholt, Aron},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Copulas, Possession, and the Temporary-Permanent
+		  Distinction in Mashi: Evidence for Decompositional HAVE},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  bondaruk2024alternating,
+  author	= {Bondaruk, Anna and Rozwadowska, Bo\.zena},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Alternating Arguments of Polish Psych Verbs},
+  volume	= {9},
+  year		= {2024}
+}
+
 @Article{	  bejar2023agree,
   author	= {Bejar, Susana and Kahnemuyipour, Arsalan},
   journal	= {Syntax},
