--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,45 @@
 
+@InProceedings{	  bylinina2014landscape,
+  address	= {T{\"u}bingen},
+  author	= {Bylinina, Lisa and McCready, E. and Yasutada, Sudo},
+  booktitle	= {Pronouns in {{Embedded Contexts}} at the
+		  {{Syntax-Semantics Interface}}},
+  title		= {The {{Landscape}} of {{Perspective Shifting}}},
+  year		= {2014}
+}
+
+@Article{	  lee2021consequences,
+  author	= {Lee, Sarah Hye-Yeon and Kaiser, Elsi},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  pages		= {545--562},
+  title		= {Consequences of Evidential Marking on the Interpretation
+		  of Subjective Predicates: {{Experimental}} Data from
+		  {{Korean}}},
+  volume	= {25},
+  year		= {2021},
+  doi		= {10.18148/sub/2021.v25i0.953}
+}
+
+@Article{	  przepiorkowski2024coordination,
+  author	= {Przepi{\'o}rkowski, Adam},
+  journal	= {Syntax},
+  number	= {n/a},
+  title		= {Coordination and Binary Branching},
+  volume	= {n/a},
+  year		= {2024},
+  doi		= {10.1111/synt.12285}
+}
+
+@Article{	  zyman2024definition,
+  author	= {Zyman, Erik},
+  journal	= {Syntax},
+  number	= {n/a},
+  title		= {On the Definition of {{Merge}}},
+  volume	= {n/a},
+  year		= {2024},
+  doi		= {10.1111/synt.12287}
+}
+
 @Article{	  finholt2024copulas,
   author	= {Finholt, Aron},
   journal	= {Glossa: a journal of general linguistics},
